# scalpel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SKILL.md  action.yml  install.sh  scalpel.config.json  uninstall.sh
.github/workflows/: scalpel-scan.yml
docs/: BLUEPRINT-V2.md  CONFIGURATION.md  SPECIFICATION.md
examples/: nextjs-ecommerce.md  parallel-debugging.md  scalpel-django.config.json  scalpel-nextjs.config.json  scan-only-health-check.md
schemas/: config.schema.json
src/: scalpel.md  scanner.sh
src/adapters/: aider.md  codex.md  cursor.cursorrules  gemini.md  opencode.md  windsurf.md
tests/scanner/: run_tests.sh  setup_fixtures.sh
tests/scanner/fixtures/empty-repo/: README.md  main.py
tests/scanner/fixtures/nextjs-project/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.js  package.json  vitest.config.ts
tests/scanner/fixtures/nextjs-project/.github/workflows/: ci.yml
tests/scanner/fixtures/nextjs-project/prisma/: schema.prisma
tests/scanner/fixtures/python-project/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
tests/scanner/fixtures/python-project/.github/workflows/: test.yml
tests/scanner/fixtures/python-project/alembic/: env.py
tests/scanner/fixtures/python-project/alembic/versions/: 001_initial_schema.py  002_add_task_labels.py
tests/scanner/fixtures/python-project/src/: main.py  models.py
tests/scanner/fixtures/python-project/src/routes/: users.py
tests/scanner/fixtures/python-project/tests/: test_main.py  test_users.py
(+6 files in other folders)
